# uz-real-estate-aggregator

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/scrapers/: __init__.py  geocode.py  olx.py  uybor.py
data/: sample_listings.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: FilterPanel.tsx  Footer.tsx  GlobeSection.tsx  Header.tsx  Hero.tsx  ListingCard.tsx  ListingsSection.tsx  MapSection.tsx  PriceChart.tsx  RegionCards.tsx  StatCard.tsx  StatsSection.tsx
frontend/src/hooks/: useCountUp.ts  useInView.ts  useSize.ts  useSpotlight.ts  useTilt.ts
frontend/src/lib/: utils.ts
frontend/src/types/: react-globe.gl.d.ts
scripts/: generate_data.py
