[project]
name = "uz-real-estate-aggregator"
version = "0.1.0"
description = "3D modern real estate price aggregator for Uzbekistan"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.30.1",
  "sqlalchemy==2.0.31",
  "pydantic==2.7.4",
  "pydantic-settings==2.3.4",
  "httpx==0.27.0",
  "beautifulsoup4==4.12.3",
  "aiohttp==3.9.5",
  "apscheduler==3.10.4",
  "python-dotenv==1.0.1",
  "python-multipart==0.0.9",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "httpx"]
